--- a/public/css/style.css
+++ b/public/css/style.css
@@ -221,6 +221,7 @@ body {
 .sidebar > .usuario {
   display: flex;
   align-items: center;
+  position: fixed;
 }
 
 .sidebar > .usuario img {
@@ -235,11 +236,20 @@ body {
   margin-left: 14px;
   font-weight: 300;
   color: #8E8E8E;
+  margin-top: 7px;
 }
 
 .sidebar > .usuario .texto strong {
   font-weight: 500;
   color: #262626;
+}
+
+.userSidebar{
+  position: absolute;
+  top: 10px;
+  margin-top: 5px;
+  right: -43px;
+  margin-bottom: 2px;
 }
 
 .sidebar .sugestoes .titulo {
@@ -248,6 +258,7 @@ body {
   align-items: center;
   padding: 20px 0 14px;
 }
+
 
 .sidebar .sugestoes .sugestao {
   display: flex;
@@ -258,8 +269,24 @@ body {
   margin-bottom: 16px;
 }
 
-.sidebar .sugestoes .sugestao .usuario {
+.sidebar .sugestoes .usuario {
   display: flex;
+}
+
+.titulo{
+  position: fixed;
+  top: 170px;
+}
+
+.sugestoes {
+  justify-content: center;
+  position: fixed;
+  width: 300px;
+  top: 325px;
+}
+
+.see-all {
+  margin-left: 112px;
 }
 
 .sidebar .sugestoes img {
@@ -270,6 +297,11 @@ body {
 .sidebar .sugestoes .seguir {
   color: #139EF2;
   font-weight: 600;
+}
+
+.seguir {
+  position: absolute;
+  right: 9px;
 }
 
 .sidebar .sugestoes .sugestao .usuario .texto {
@@ -287,15 +319,21 @@ body {
 .links, .copyright {
   font-size: 11px;
   color: #C7C7C7;
+  position: absolute;
+  top: 500px;
 } 
 
 .links {
   margin-top: 40px;
   cursor: pointer;
+  position: fixed;
+  top: 430px;
 }
 
 .copyright {
   margin-top: 18px;
+  position: fixed;
+  top: 500px;
 }
 
 .fundo-mobile {
